apiserver: Testing various options